[Equipment] Fixing issues in the floating equipment context menu